--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -124,7 +124,7 @@
     "message": "Hecho"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
-    "message": "Due to browser restrictions and additional permissions missing, Ghostery is not able to protect you."
+    "message": "Debido a las restricciones del navegador y a la falta de permisos adicionales, Ghostery no puede protegerte."
   },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Elimina los anuncios de los sitios web, para navegar de forma rápida y segura."
@@ -134,7 +134,7 @@
     "description": "Tracker category name"
   },
   "enable_ad_blocking_now": {
-    "message": "Enable Ad Blocking Now"
+    "message": "Activar el bloqueo de anuncios"
   },
   "enable_ghostery": {
     "message": "Habilitar Ghostery"
@@ -152,7 +152,7 @@
     "message": "Activar nueva configuración"
   },
   "enable_now": {
-    "message": "Enable now"
+    "message": "Activar"
   },
   "enabled": {
     "message": "Habilitado"
@@ -162,7 +162,7 @@
     "description": "Tracker category name"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
-    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
+    "message": "Amplía el bloqueo de anuncios de Ghostery a los buscadores en unos sencillos pasos."
   },
   "extensions": {
     "message": "Extensiones",
@@ -172,10 +172,10 @@
     "message": "Para obtener más información, lee todos nuestros"
   },
   "further_protection": {
-    "message": "Further Protection"
+    "message": "Mayor protección"
   },
   "get_help": {
-    "message": "Get help"
+    "message": "Obtén ayuda"
   },
   "ghostery__action_required": {
     "message": "Ghostery: accion necesaria"
@@ -235,7 +235,7 @@
     "message": "Únete a Ghostery en la lucha por una web en la que la privacidad sea un derecho humano básico."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
-    "message": "Hey, do you enjoy Ghostery and want to support our work?"
+    "message": "¿Te gusta Ghostery y quieres apoyar nuestro trabajo?"
   },
   "hosting": {
     "message": "Hosting",
@@ -282,7 +282,7 @@
     "description": "Tracker category name"
   },
   "more_ad_blocking_available": {
-    "message": "More ad blocking available"
+    "message": "Más bloqueo de anuncios disponible"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Más información sobre la metodología $${0} en el Manifiesto de Ghostery."
@@ -291,7 +291,7 @@
     "message": "Mi cuenta"
   },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
-    "message": "Navigate to a website to see Ghostery in action."
+    "message": "Navega a un sitio web para ver Ghostery en acción."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -309,10 +309,10 @@
     "message": "No se detectaron rastreadores"
   },
   "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Number of trackers with blocked network requests."
+    "message": "Número de rastreadores con solicitudes de red bloqueadas."
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Number of trackers with removed cookies or fingerprints."
+    "message": "Número de rastreadores con cookies o huellas dactilares eliminadas."
   },
   "off": {
     "message": "No"
@@ -352,7 +352,7 @@
     "message": "Ánclala aquí"
   },
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "Prevent Google from redirecting search result links through their servers instead of linking directly to pages."
+    "message": "Evita que Google redirija los enlaces de los resultados de búsqueda a través de sus servidores, en lugar de enlazar directamente a las páginas."
   },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Previene diversas técnicas de rastreo con tecnología de inteligencia artificial."
@@ -388,7 +388,7 @@
     "message": "Guarda y sincroniza tus ajustes personalizados en todos tus navegadores y dispositivos."
   },
   "search_engine_redirect_protection": {
-    "message": "Search Engine Redirect Protection"
+    "message": "Protección frente al redireccionamiento en buscadores"
   },
   "search_website___": {
     "message": "Buscar sitio web..."
@@ -436,7 +436,7 @@
     "message": "¿TE HAS CANSADO DE LAS VENTANAS SOBRE LAS COOKIES?"
   },
   "trackers_blocked": {
-    "message": "Trackers blocked"
+    "message": "Rastreadores bloqueados"
   },
   "trackers_count": {
     "message": "Número de rastreadores"
@@ -448,7 +448,7 @@
     "message": "Rastreadores detectados por Ghostery en esta página web:&nbsp;$${0}"
   },
   "trackers_modified": {
-    "message": "Trackers modified"
+    "message": "Rastreadores modificados"
   },
   "trackers_preview": {
     "message": "Vista previa de rastreadores"
@@ -461,13 +461,13 @@
     "description": "Tracker category name"
   },
   "urls_blocked": {
-    "message": "URLs blocked"
+    "message": "URL bloqueadas"
   },
   "urls_modified": {
-    "message": "URLs modified"
+    "message": "URL modificadas"
   },
   "urls_observed": {
-    "message": "URLs observed"
+    "message": "URL observadas"
   },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Actualizamos los Términos y condiciones. Para seguir usando Ghostery Tracker & Ad Blocker mientras navegas, renueva la configuración."
