--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -124,7 +124,7 @@
     "message": "Terminé"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
-    "message": "Due to browser restrictions and additional permissions missing, Ghostery is not able to protect you."
+    "message": "En raison des restrictions du navigateur et d'autorisations supplémentaires manquantes, Ghostery n'est pas en mesure de vous protéger."
   },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Supprime les publicités sur les sites web pour une navigation sûre et rapide."
@@ -134,7 +134,7 @@
     "description": "Tracker category name"
   },
   "enable_ad_blocking_now": {
-    "message": "Enable Ad Blocking Now"
+    "message": "Activer le blocage des publicités maintenant"
   },
   "enable_ghostery": {
     "message": "Activer Ghostery"
@@ -152,7 +152,7 @@
     "message": "Activer la nouvelle configuration"
   },
   "enable_now": {
-    "message": "Enable now"
+    "message": "Activer maintenant"
   },
   "enabled": {
     "message": "Activé"
@@ -162,7 +162,7 @@
     "description": "Tracker category name"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
-    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
+    "message": "Étendez le blocage des publicités de Ghostery aux moteurs de recherche en quelques étapes simples."
   },
   "extensions": {
     "message": "Extensions",
@@ -172,10 +172,10 @@
     "message": "Pour plus d'information, lisez notre"
   },
   "further_protection": {
-    "message": "Further Protection"
+    "message": "Protection supplémentaire"
   },
   "get_help": {
-    "message": "Get help"
+    "message": "Obtenir de l'aide"
   },
   "ghostery__action_required": {
     "message": "Ghostery : action requise"
@@ -235,7 +235,7 @@
     "message": "Aidez Ghostery à lutter pour un Web où la vie privée est un droit humain fondamental."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
-    "message": "Hey, do you enjoy Ghostery and want to support our work?"
+    "message": "Vous appréciez Ghostery et souhaitez soutenir notre travail ?"
   },
   "hosting": {
     "message": "Hébergement",
@@ -282,7 +282,7 @@
     "description": "Tracker category name"
   },
   "more_ad_blocking_available": {
-    "message": "More ad blocking available"
+    "message": "Davantage de blocage de publicités disponible"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Plus d'informations sur la méthodologie $${0} dans le Manifeste de Ghostery."
@@ -291,7 +291,7 @@
     "message": "Mon compte"
   },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
-    "message": "Navigate to a website to see Ghostery in action."
+    "message": "Naviguez jusqu'à un site web pour voir Ghostery en action."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -309,10 +309,10 @@
     "message": "Pas de trackers détectés"
   },
   "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Number of trackers with blocked network requests."
+    "message": "Nombre de mouchards avec des demandes de réseau bloquées."
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Number of trackers with removed cookies or fingerprints."
+    "message": "Nombre de mouchards avec des empreintes ou des cookies supprimés."
   },
   "off": {
     "message": "désactivé"
@@ -352,7 +352,7 @@
     "message": "L'épingler ici"
   },
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "Prevent Google from redirecting search result links through their servers instead of linking directly to pages."
+    "message": "Empêcher Google de rediriger les liens des résultats de recherche via ses serveurs au lieu de renvoyer directement vers les pages."
   },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Empêche différentes techniques de suivi à l'aide d'une technologie basée sur l'IA."
@@ -388,7 +388,7 @@
     "message": "Enregistrez et synchronisez vos paramètres personnalisés sur vos navigateurs et vos appareils."
   },
   "search_engine_redirect_protection": {
-    "message": "Search Engine Redirect Protection"
+    "message": "Protection contre les redirections dans les moteurs de recherche"
   },
   "search_website___": {
     "message": "Rechercher sur le site..."
@@ -436,7 +436,7 @@
     "message": "REFUSER LES COOKIES VOUS USE ?"
   },
   "trackers_blocked": {
-    "message": "Trackers blocked"
+    "message": "Mouchards bloqués"
   },
   "trackers_count": {
     "message": "Trackers comptés"
@@ -448,7 +448,7 @@
     "message": "Mouchards détectés par Ghostery sur ce site :&nbsp;$${0}"
   },
   "trackers_modified": {
-    "message": "Trackers modified"
+    "message": "Mouchards modifiés"
   },
   "trackers_preview": {
     "message": "Aperçu mouchards"
@@ -461,13 +461,13 @@
     "description": "Tracker category name"
   },
   "urls_blocked": {
-    "message": "URLs blocked"
+    "message": "URL bloquées"
   },
   "urls_modified": {
-    "message": "URLs modified"
+    "message": "URL modifiées"
   },
   "urls_observed": {
-    "message": "URLs observed"
+    "message": "URL observées"
   },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Nous avons mis à jour nos Conditions générales. Pour continuer à utiliser le bloqueur de trackers et de publicités Ghostery, veuillez renouveler la configuration."
