--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -124,7 +124,7 @@
     "message": "Gotowe"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
-    "message": "Due to browser restrictions and additional permissions missing, Ghostery is not able to protect you."
+    "message": "Ze względu na ograniczenia przeglądarki i brak dodatkowych uprawnień, Ghostery nie jest w stanie Cię chronić."
   },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Usuwa reklamy na stronach internetowych, zapewniając bezpieczniejsze i szybsze przeglądanie."
@@ -134,7 +134,7 @@
     "description": "Tracker category name"
   },
   "enable_ad_blocking_now": {
-    "message": "Enable Ad Blocking Now"
+    "message": "Włącz teraz blokowanie reklam"
   },
   "enable_ghostery": {
     "message": "Aktywuj Ghostery"
@@ -152,7 +152,7 @@
     "message": "Aktywuj nową konfigurację"
   },
   "enable_now": {
-    "message": "Enable now"
+    "message": "Włącz teraz"
   },
   "enabled": {
     "message": "Włączone"
@@ -162,7 +162,7 @@
     "description": "Tracker category name"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
-    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
+    "message": "Rozszerz blokowanie reklam Ghostery na wyszukiwarki w kilku prostych krokach."
   },
   "extensions": {
     "message": "Rozszerzenia",
@@ -172,10 +172,10 @@
     "message": "Aby uzyskać więcej informacji, przeczytaj "
   },
   "further_protection": {
-    "message": "Further Protection"
+    "message": "Dalsza ochrona"
   },
   "get_help": {
-    "message": "Get help"
+    "message": "Uzyskaj pomoc"
   },
   "ghostery__action_required": {
     "message": "Ghostery: wymagane działanie"
@@ -235,7 +235,7 @@
     "message": "Pomóż Ghostery w walce o sieć, w której prywatność będzie podstawowym prawem człowieka."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
-    "message": "Hey, do you enjoy Ghostery and want to support our work?"
+    "message": "Hej, lubisz Ghostery i chcesz wesprzeć naszą pracę?"
   },
   "hosting": {
     "message": "Hosting",
@@ -282,7 +282,7 @@
     "description": "Tracker category name"
   },
   "more_ad_blocking_available": {
-    "message": "More ad blocking available"
+    "message": "Dostępne jest więcej opcji blokowania reklam"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Więcej informacji o metodologii $${0} w Manifeście Ghostery."
@@ -291,7 +291,7 @@
     "message": "Moje konto"
   },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
-    "message": "Navigate to a website to see Ghostery in action."
+    "message": "Przejdź na stronę internetową, aby zobaczyć, jak działa Ghostery."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -309,10 +309,10 @@
     "message": "Nie wykryto trackerów"
   },
   "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Number of trackers with blocked network requests."
+    "message": "Liczba elementów śledzących z zablokowanymi żądaniami sieciowymi"
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Number of trackers with removed cookies or fingerprints."
+    "message": "Liczba elementów śledzących z usuniętymi plikami cookie lub odciskami palców."
   },
   "off": {
     "message": "Wył."
@@ -352,7 +352,7 @@
     "message": "Przypnij je tu"
   },
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
-    "message": "Prevent Google from redirecting search result links through their servers instead of linking directly to pages."
+    "message": "Uniemożliwiaj Google przekierowywanie łączy do wyników wyszukiwania przez ich serwery zamiast bezpośredniego łączenia do stron."
   },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Chroń swoje dane przed śledzeniem w sieci dzięki technologii wspomaganej przez SI"
@@ -388,7 +388,7 @@
     "message": "Zapisz i zsynchronizuj ustawienia niestandardowe pomiędzy przeglądarkami a urządzeniami."
   },
   "search_engine_redirect_protection": {
-    "message": "Search Engine Redirect Protection"
+    "message": "Ochrona przekierowywania wyszukiwarki"
   },
   "search_website___": {
     "message": "Wyszukiwanie witryny..."
@@ -436,7 +436,7 @@
     "message": "MASZ JUŻ DOŚĆ PYTAŃ O CIASTECZKA?"
   },
   "trackers_blocked": {
-    "message": "Trackers blocked"
+    "message": "Zablokowane elementy śledzące"
   },
   "trackers_count": {
     "message": "Licznik trackerów"
@@ -448,7 +448,7 @@
     "message": "Ghostery wykrył trackery śledzące na tej stronie:&nbsp;$${0}"
   },
   "trackers_modified": {
-    "message": "Trackers modified"
+    "message": "Zmodyfikowane elementy śledzące"
   },
   "trackers_preview": {
     "message": "Podgląd trackerów"
@@ -461,13 +461,13 @@
     "description": "Tracker category name"
   },
   "urls_blocked": {
-    "message": "URLs blocked"
+    "message": "Zablokowane adresy URL"
   },
   "urls_modified": {
-    "message": "URLs modified"
+    "message": "Zmodyfikowane adresy URL"
   },
   "urls_observed": {
-    "message": "URLs observed"
+    "message": "Zaobserwowane adresy URL"
   },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Zaktualizowaliśmy Warunki. Żeby nadal korzystać z trackera i blokera reklam Ghostery podczas przeglądania stron, wznów konfigurację."
